--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Poppins', sans-serif;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -10,21 +10,20 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    height: 100vh;
+    gap: 30px;
 }
-
 h1 {
     font-size: 50px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 
 #grid {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    width: 960px;
-    height: 960px;
+    width: 800px;
 }
 
 .cell {
@@ -36,7 +35,7 @@ h1 {
 #controls {
     display: flex;
     gap: 25px;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
 }
 
 button {
